// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _accessKey="V" 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="combobox-nonce" id="combobox-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              V
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input accesskey="V" aria-autocomplete="both" aria-controls="combobox-nonce-listbox" aria-expanded="false" aria-labelledby="combobox-nonce-label" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="combobox-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <kol-button-wc _hidelabel="" _icons="kolicon-cross" _label="kol-delete-selection" _variant="ghost" class="kol-combobox__delete" data-testid="combobox-delete"></kol-button-wc>
              <button class="kol-combobox-toggle" tabindex="-1" type="button">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
              </button>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" id="combobox-nonce-listbox" role="listbox">
              <li class="kol-custom-suggestions-option" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li aria-selected="true" class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  <mark>
                    Herr
                  </mark>
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _alert=true 1`] = `
<kol-combobox _alert="" _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="combobox-nonce" id="combobox-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="combobox-nonce-listbox" aria-expanded="false" aria-labelledby="combobox-nonce-label" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="combobox-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <kol-button-wc _hidelabel="" _icons="kolicon-cross" _label="kol-delete-selection" _variant="ghost" class="kol-combobox__delete" data-testid="combobox-delete"></kol-button-wc>
              <button class="kol-combobox-toggle" tabindex="-1" type="button">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
              </button>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" id="combobox-nonce-listbox" role="listbox">
              <li class="kol-custom-suggestions-option" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li aria-selected="true" class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  <mark>
                    Herr
                  </mark>
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _disabled=true 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field kol-form-field--disabled">
      <label class="kol-form-field__label" htmlfor="combobox-nonce" id="combobox-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="combobox-nonce-listbox" aria-expanded="false" aria-labelledby="combobox-nonce-label" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input kol-input--disabled" disabled="" id="combobox-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <kol-button-wc _disabled="" _hidelabel="" _icons="kolicon-cross" _label="kol-delete-selection" _variant="ghost" class="kol-combobox__delete" data-testid="combobox-delete" hidden=""></kol-button-wc>
              <button class="kol-combobox-toggle" disabled="" hidden="" tabindex="-1" type="button">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
              </button>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" id="combobox-nonce-listbox" role="listbox">
              <li class="kol-custom-suggestions-option" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li aria-selected="true" class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  <mark>
                    Herr
                  </mark>
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _hint="Hint" 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="combobox-nonce" id="combobox-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="combobox-nonce-listbox" aria-describedby="combobox-hint-nonce" aria-expanded="false" aria-labelledby="combobox-nonce-label" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="combobox-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <kol-button-wc _hidelabel="" _icons="kolicon-cross" _label="kol-delete-selection" _variant="ghost" class="kol-combobox__delete" data-testid="combobox-delete"></kol-button-wc>
              <button class="kol-combobox-toggle" tabindex="-1" type="button">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
              </button>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" id="combobox-nonce-listbox" role="listbox">
              <li class="kol-custom-suggestions-option" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li aria-selected="true" class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  <mark>
                    Herr
                  </mark>
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="combobox-hint-nonce">
        Hint
      </span>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="combobox-nonce" id="combobox-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="combobox-nonce-listbox" aria-expanded="false" aria-labelledby="combobox-nonce-label" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="combobox-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <kol-button-wc _hidelabel="" _icons="kolicon-cross" _label="kol-delete-selection" _variant="ghost" class="kol-combobox__delete" data-testid="combobox-delete"></kol-button-wc>
              <button class="kol-combobox-toggle" tabindex="-1" type="button">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
              </button>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" id="combobox-nonce-listbox" role="listbox">
              <li class="kol-custom-suggestions-option" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li aria-selected="true" class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  <mark>
                    Herr
                  </mark>
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="combobox-nonce" id="combobox-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="combobox-nonce-listbox" aria-expanded="false" aria-labelledby="combobox-nonce-label" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="combobox-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <kol-button-wc _hidelabel="" _icons="kolicon-cross" _label="kol-delete-selection" _variant="ghost" class="kol-combobox__delete" data-testid="combobox-delete"></kol-button-wc>
              <button class="kol-combobox-toggle" tabindex="-1" type="button">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
              </button>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" id="combobox-nonce-listbox" role="listbox">
              <li class="kol-custom-suggestions-option" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li aria-selected="true" class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  <mark>
                    Herr
                  </mark>
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="combobox-nonce" id="combobox-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="combobox-nonce-listbox" aria-expanded="false" aria-labelledby="combobox-nonce-label" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="combobox-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <kol-button-wc _hidelabel="" _icons="kolicon-cross" _label="kol-delete-selection" _variant="ghost" class="kol-combobox__delete" data-testid="combobox-delete"></kol-button-wc>
              <button class="kol-combobox-toggle" tabindex="-1" type="button">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
              </button>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" id="combobox-nonce-listbox" role="listbox">
              <li class="kol-custom-suggestions-option" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li aria-selected="true" class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  <mark>
                    Herr
                  </mark>
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-combobox _touched="" _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field kol-form-field--error kol-form-field--hidden-msg kol-form-field--msg-type-error kol-form-field--touched">
      <label class="kol-form-field__label" htmlfor="combobox-nonce" id="combobox-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="combobox-nonce-listbox" aria-describedby="combobox-error-nonce" aria-expanded="false" aria-labelledby="combobox-nonce-label" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input kol-input--error kol-input--touched" id="combobox-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <kol-button-wc _hidelabel="" _icons="kolicon-cross" _label="kol-delete-selection" _variant="ghost" class="kol-combobox__delete" data-testid="combobox-delete"></kol-button-wc>
              <button class="kol-combobox-toggle" tabindex="-1" type="button">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
              </button>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" id="combobox-nonce-listbox" role="listbox">
              <li class="kol-custom-suggestions-option" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li aria-selected="true" class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  <mark>
                    Herr
                  </mark>
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="combobox-nonce" id="combobox-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="combobox-nonce-listbox" aria-describedby="combobox-msg-nonce" aria-expanded="false" aria-labelledby="combobox-nonce-label" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="combobox-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <kol-button-wc _hidelabel="" _icons="kolicon-cross" _label="kol-delete-selection" _variant="ghost" class="kol-combobox__delete" data-testid="combobox-delete"></kol-button-wc>
              <button class="kol-combobox-toggle" tabindex="-1" type="button">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
              </button>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" id="combobox-nonce-listbox" role="listbox">
              <li class="kol-custom-suggestions-option" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li aria-selected="true" class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  <mark>
                    Herr
                  </mark>
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _readOnly=true 1`] = `
<kol-combobox _readonly="" _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="combobox-nonce" id="combobox-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="combobox-nonce-listbox" aria-expanded="false" aria-labelledby="combobox-nonce-label" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="combobox-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <kol-button-wc _hidelabel="" _icons="kolicon-cross" _label="kol-delete-selection" _variant="ghost" class="kol-combobox__delete" data-testid="combobox-delete"></kol-button-wc>
              <button class="kol-combobox-toggle" tabindex="-1" type="button">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
              </button>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" id="combobox-nonce-listbox" role="listbox">
              <li class="kol-custom-suggestions-option" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li aria-selected="true" class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  <mark>
                    Herr
                  </mark>
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _shortKey="S" 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="combobox-nonce" id="combobox-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              S
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="combobox-nonce-listbox" aria-expanded="false" aria-keyshortcuts="S" aria-labelledby="combobox-nonce-label" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="combobox-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <kol-button-wc _hidelabel="" _icons="kolicon-cross" _label="kol-delete-selection" _variant="ghost" class="kol-combobox__delete" data-testid="combobox-delete"></kol-button-wc>
              <button class="kol-combobox-toggle" tabindex="-1" type="button">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
              </button>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" id="combobox-nonce-listbox" role="listbox">
              <li class="kol-custom-suggestions-option" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li aria-selected="true" class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  <mark>
                    Herr
                  </mark>
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] _touched=true 1`] = `
<kol-combobox _touched="" _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field kol-form-field--touched">
      <label class="kol-form-field__label" htmlfor="combobox-nonce" id="combobox-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="combobox-nonce-listbox" aria-expanded="false" aria-labelledby="combobox-nonce-label" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input kol-input--touched" id="combobox-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <kol-button-wc _hidelabel="" _icons="kolicon-cross" _label="kol-delete-selection" _variant="ghost" class="kol-combobox__delete" data-testid="combobox-delete"></kol-button-wc>
              <button class="kol-combobox-toggle" tabindex="-1" type="button">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
              </button>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" id="combobox-nonce-listbox" role="listbox">
              <li class="kol-custom-suggestions-option" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li aria-selected="true" class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  <mark>
                    Herr
                  </mark>
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;

exports[`kol-combobox should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Herr" _suggestions=["Frau","Herr","Divers"] 1`] = `
<kol-combobox _value="Herr">
  <template shadowrootmode="open">
    <div class="has-value kol-combobox kol-form-field">
      <label class="kol-form-field__label" htmlfor="combobox-nonce" id="combobox-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-combobox__group">
              <input aria-autocomplete="both" aria-controls="combobox-nonce-listbox" aria-expanded="false" aria-labelledby="combobox-nonce-label" autocapitalize="off" autocorrect="off" class="kol-combobox__input kol-input" id="combobox-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="Herr">
              <kol-button-wc _hidelabel="" _icons="kolicon-cross" _label="kol-delete-selection" _variant="ghost" class="kol-combobox__delete" data-testid="combobox-delete"></kol-button-wc>
              <button class="kol-combobox-toggle" tabindex="-1" type="button">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
              </button>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" id="combobox-nonce-listbox" role="listbox">
              <li class="kol-custom-suggestions-option" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li aria-selected="true" class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  <mark>
                    Herr
                  </mark>
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-combobox>
`;
